# dbus-asio

./: .gitignore  CMakeLists.txt  dbus-asio.pc.in
.github/workflows/: build-and-test.yml
example/: dbus-test.cpp
example/tests/: pummel-client.cpp  pummel-server.cpp
src/: dbus.h  dbus_asio.h.in  dbus_auth.cpp  dbus_auth.h  dbus_connection.cpp  dbus_connection.h  dbus_error.h  dbus_introspectable.cpp  dbus_introspectable.h  dbus_log.cpp  dbus_log.h  dbus_matchrule.cpp  dbus_matchrule.h  dbus_message.cpp  dbus_message.h  dbus_messageistream.cpp  dbus_messageistream.h  dbus_messageostream.h  dbus_messageprotocol.cpp  dbus_messageprotocol.h  dbus_names.cpp  dbus_names.h  dbus_octetbuffer.cpp  dbus_octetbuffer.h  dbus_transport.cpp  dbus_transport.h  dbus_type.cpp  dbus_type.h  dbus_type_any.cpp  dbus_type_any.h  dbus_type_array.cpp  dbus_type_array.h  dbus_type_boolean.cpp  dbus_type_boolean.h  dbus_type_byte.cpp  dbus_type_byte.h  dbus_type_dictentry.cpp  dbus_type_dictentry.h  dbus_type_double.cpp  dbus_type_double.h  (+24 more)
tests/: CMakeLists.txt  dbus_asio_test.cpp  dbus_matchrule_unittest.cpp  dbus_messageistream_unittest.cpp  dbus_names_unittest.cpp  dbus_type_array_unittest.cpp  dbus_type_boolean_unittest.cpp  dbus_type_byte_unittest.cpp  dbus_type_dictentry_unittest.cpp  dbus_type_double_unittest.cpp  dbus_type_int16_unittest.cpp  dbus_type_int32_unittest.cpp  dbus_type_int64_unittest.cpp  dbus_type_multiple_unittest.cpp  dbus_type_signature_unittest.cpp  dbus_type_string_unittest.cpp  dbus_type_struct_unittest.cpp  dbus_type_uint16_unittest.cpp  dbus_type_uint32_unittest.cpp  dbus_type_uint64_unittest.cpp  dbus_type_unixfd_unittest.cpp  dbus_type_variant_unittest.cpp  test_unmarshall.h
